[gd_scene load_steps=8 format=2]

[ext_resource path="res://demo/test-scenes/test-scene-basic/TestSceneBasic.tscn" type="PackedScene" id=1]
[ext_resource path="res://pool-manager/Pool2DBasic.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/src/FractureShard.tscn" type="PackedScene" id=3]
[ext_resource path="res://demo/src/RigidBody2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://demo/src/PointFracture.gd" type="Script" id=5]
[ext_resource path="res://demo/src/CutShapeVisualizer.tscn" type="PackedScene" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[node name="PointFractureSceneBasic" instance=ExtResource( 1 )]

[node name="PointFracture" type="Node2D" parent="." index="0"]
script = ExtResource( 5 )
fracture_body_color = Color( 0.529412, 0.807843, 0.819608, 1 )

[node name="SourceParent" type="Node2D" parent="PointFracture" index="0"]

[node name="RigidBody2D" parent="PointFracture/SourceParent" index="0" instance=ExtResource( 4 )]
mass = 500.0
can_sleep = false
rand_linear_velocity_range = Vector2( 0, 0 )
radius = 300.0
placed_in_level = true
randomize_texture_properties = false

[node name="Edge" type="StaticBody2D" parent="PointFracture" index="1"]
modulate = Color( 0.537255, 0.266667, 0.266667, 1 )
physics_material_override = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PointFracture/Edge" index="0"]
polygon = PoolVector2Array( 1888, -928, 1888, 960, 576, 960, 448, 672, -384, 672, -512, 960, -1888, 960, -1888, -928, -1952, -928, -1952, 1120, 1952, 1120, 1952, -1120, -1952, -1088, -1952, -928 )

[node name="Polygon2D" type="Polygon2D" parent="PointFracture/Edge" index="1"]
color = Color( 0.596078, 0.596078, 0.596078, 1 )
polygon = PoolVector2Array( 1888, -928, 1888, 960, 576, 960, 448, 672, -384, 672, -512, 960, -1888, 960, -1888, -928, -1952, -928, -1952, 1120, 1952, 1120, 1952, -1120, -1952, -1120, -1952, -928 )

[node name="Line2D" type="Line2D" parent="PointFracture/Edge" index="2"]
points = PoolVector2Array( -1888, -928, 1888, -928, 1888, 960, 576, 960, 448, 672, -384, 672, -512, 960, -1888, 960, -1888, -928 )
width = 20.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Pool_FractureShards" parent="PointFracture" index="2" instance=ExtResource( 2 )]
placed_in_level = true
instance_template = ExtResource( 3 )
max_amount = 250
keep_instances_in_tree = true

[node name="Pool_CutVisualizer" parent="PointFracture" index="3" instance=ExtResource( 2 )]
placed_in_level = true
instance_template = ExtResource( 6 )
max_amount = 30
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Title" parent="CanvasLayer" index="0"]
text = "POINT FRACTURE"

[node name="InfoLabel" parent="CanvasLayer" index="1"]
text = "CHANGE TEST [W]
FULLSCREEN [F]
QUIT [ESC]"
